--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
                                     <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto mt-2">
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-australia')">Australian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-china-sprint')">Chinese GP Sprint</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-china')">Chinese GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-japan')">Japanese GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-bahrain')">Bahrain GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-saudi arabia')">Saudi Arabia GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami-sprint')">Miami GP Sprint</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami')">Miami GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-china')">Chinese GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-japan')">Japanese GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-bahrain')">Bahrain GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-saudi arabia')">Saudi Arabia GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-miami-sprint')">Miami GP Sprint</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-miami')">Miami GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-emilia')">Emilia GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-monaco')">Monaco GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -360,31 +360,31 @@
                                             <p><strong>Chinese Grand Prix Sprint</strong></p>
                                             <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-china" class="facts-content hidden">
+                                        <div id="facts-china" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix</strong></p>
                                             <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-japan" class="facts-content hidden">
+                                        <div id="facts-japan" class="facts-content hidden">
                                             <p><strong>Japanese Grand Prix</strong></p>
                                             <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-bahrain" class="facts-content hidden">
+                                        <div id="facts-bahrain" class="facts-content hidden">
                                             <p><strong>Bahrain Grand Prix</strong></p>
                                             <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-saudi arabia" class="facts-content hidden">
+                                        <div id="facts-saudi arabia" class="facts-content hidden">
                                             <p><strong>Saudi Arabia Grand Prix</strong></p>
                                             <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-miami-sprint" class="facts-content hidden">
+                                        <div id="facts-miami-sprint" class="facts-content hidden">
                                             <p><strong>Miami Sprint Grand Prix</strong></p>
                                             <img src="images/MiamiSprintResult.png" alt="Miami Sprint Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-miami" class="facts-content hidden">
+                                        <div id="facts-miami" class="facts-content hidden">
                                             <p><strong>Miami Grand Prix</strong></p>
                                             <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-emilia" class="facts-content hidden">
+                                        <div id="facts-emilia" class="facts-content hidden">
                                             <p><strong>Emilia Romagna Grand Prix</strong></p>
                                             <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         <video width="640" height="360" controls>
@@ -392,7 +392,7 @@
                                             Your browser does not support the video tag.
                                         </video>
                                         </div>
-                                        <div id="race-monaco" class="facts-content hidden">
+                                        <div id="facts-monaco" class="facts-content hidden">
                                             <p><strong>Monaco Grand Prix</strong></p>
                                             <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
