--- a/index.html
+++ b/index.html
@@ -355,7 +355,10 @@
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
                                         <div id="facts-general" class="facts-content">
                                             <p><strong>General</strong></p>
-                                            <img src="images/AustraliaResult.png" alt="General" class="w-full max-w-md h-auto mb-4">
+                                            <video width="640" height="360" controls>
+                                                <source src="images/EmiliaQualy.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
                                         </div>
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
                                         <div id="facts-australia" class="facts-content">
