--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
                                         <div id="facts-general" class="facts-content">
-                                            <p><strong>General</strong></p>
+                                            <p><strong>F1 Engine sounds</strong></p>
                                             <video width="640" height="360" controls>
                                                 <source src="images/f1Sounds.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
