--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                                                 <source src="images/f1Sounds.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
                                             </video>
+                                            <p>FORMULA ADDICT. (2025, February 11). F1 Engine Sounds [Video]. X. https://x.com/i/status/1889351304876617979</p>
                                         </div>
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
                                         <div id="facts-australia" class="facts-content">
