--- a/index.html
+++ b/index.html
@@ -363,8 +363,11 @@
                                         </div>
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
                                         <div id="facts-australia" class="facts-content">
-                                            <p><strong>Australian Grand Prix</strong></p>
-                                            <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Australian Grand Prix Qualifying</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/AusQualy.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>                        
                                         </div>
                                         <div id="facts-china-sprint" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix Sprint</strong></p>
