--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
                                             <video width="640" height="360" controls>
                                                 <source src="images/AusQualy.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
-                                            </video>                        
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, March 15). Australian Qualifying [Video]. X. https://x.com/i/status/1900930714188533844</p>
                                         </div>
                                         <div id="facts-china-sprint" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix Sprint</strong></p>
