--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                             </video>
                                             <p>FORMULA ADDICT. (2025, February 11). F1 Engine Sounds [Video]. X. https://x.com/i/status/1889351304876617979</p>
                                         </div>                                  
-                                        <div id="facts-australia" class="facts-content">
+                                        <div id="facts-australia" class="facts-content hidden">
                                             <p><strong>Australian Grand Prix Qualifying</strong></p>
                                             <video width="640" height="360" controls>
                                                 <source src="images/AusQualy.mp4" type="video/mp4">
