--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@
                                             </video>
                                             <p>FORMULA ADDICT. (2025, March 15). Australian Qualifying [Video]. X. https://x.com/i/status/1900930714188533844</p>
                                         </div>
-                                        <div id="facts-china-sprint" class="facts-content hidden">
-                                            <p><strong>Chinese Grand Prix Sprint</strong></p>
-                                            <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
-                                        </div>
                                         <div id="facts-china" class="facts-content hidden">
-                                            <p><strong>Chinese Grand Prix</strong></p>
-                                            <img src="images/ChinaResult.png" alt="Chinese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Chinese Grand Prix Qualifying</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/ChinaQualy.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, March 22). China Qualifying [Video]. X. https://x.com/i/status/1903418068270715266</p>
                                         </div>
                                         <div id="facts-japan" class="facts-content hidden">
                                             <p><strong>Japanese Grand Prix</strong></p>
