--- a/index.html
+++ b/index.html
@@ -375,11 +375,15 @@
                                                 <source src="images/ChinaQualy.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
                                             </video>
-                                            <p>FORMULA ADDICT. (2025, March 22). China Qualifying [Video]. X. https://x.com/i/status/1903418068270715266</p>
+                                            <p>FORMULA ADDICT. (2025, March 22). Chinese Qualifying [Video]. X. https://x.com/i/status/1903418068270715266</p>
                                         </div>
                                         <div id="facts-japan" class="facts-content hidden">
-                                            <p><strong>Japanese Grand Prix</strong></p>
-                                            <img src="images/JapanResult.png" alt="Japanese Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Japanese Grand Prix Qualifying</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/JapanQualy.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, April 5). Japanese Qualifying [Video]. X. https://x.com/i/status/1908511412575477985</p>
                                         </div>
                                         <div id="facts-bahrain" class="facts-content hidden">
                                             <p><strong>Bahrain Grand Prix</strong></p>
