--- a/index.html
+++ b/index.html
@@ -387,7 +387,11 @@
                                         </div>
                                         <div id="facts-bahrain" class="facts-content hidden">
                                             <p><strong>Bahrain Grand Prix</strong></p>
-                                            <img src="images/BahrainResult.png" alt="Bahrain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                             <video width="640" height="360" controls>
+                                                <source src="images/BahrainQualy.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, April 13). Bahrain Qualifying [Video]. X. https://x.com/i/status/1911185450489852276</p>
                                         </div>
                                         <div id="facts-saudi arabia" class="facts-content hidden">
                                             <p><strong>Saudi Arabia Grand Prix</strong></p>
