--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                             <p>FORMULA ADDICT. (2025, April 5). Japanese Qualifying [Video]. X. https://x.com/i/status/1908511412575477985</p>
                                         </div>
                                         <div id="facts-bahrain" class="facts-content hidden">
-                                            <p><strong>Bahrain Grand Prix</strong></p>
+                                            <p><strong>Bahrain Grand Prix Qualifying</strong></p>
                                              <video width="640" height="360" controls>
                                                 <source src="images/BahrainQualy.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
@@ -394,8 +394,12 @@
                                             <p>FORMULA ADDICT. (2025, April 13). Bahrain Qualifying [Video]. X. https://x.com/i/status/1911185450489852276</p>
                                         </div>
                                         <div id="facts-saudi arabia" class="facts-content hidden">
-                                            <p><strong>Saudi Arabia Grand Prix</strong></p>
-                                            <img src="images/SaudiArabiaResult.png" alt="Saudi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Saudi Arabia Grand Prix Qualifying</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/SaudiQualy.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, April 20). Saudi Arabia Qualifying [Video]. X. https://x.com/i/status/1913867627505623090</p>
                                         </div>
                                         <div id="facts-miami-sprint" class="facts-content hidden">
                                             <p><strong>Miami Sprint Grand Prix</strong></p>
