--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@
                                                 Your browser does not support the video tag.
                                             </video>
                                             <p>FORMULA ADDICT. (2025, February 11). F1 Engine Sounds [Video]. X. https://x.com/i/status/1889351304876617979</p>
+                                            <p><strong>F1 Car weight</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/CarWeight.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, May 8). F1 Car Weight [Video]. X. https://x.com/i/status/1920518989047902558</p>
                                         </div>                                  
                                         <div id="facts-australia" class="facts-content hidden">
                                             <p><strong>Australian Grand Prix Qualifying</strong></p>
