--- a/index.html
+++ b/index.html
@@ -416,12 +416,12 @@
                                             <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="facts-emilia" class="facts-content hidden">
-                                            <p><strong>Emilia Romagna Grand Prix</strong></p>
-                                            <img src="images/EmiliaResult.png" alt="Emilia Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Emilia Romagna Grand Prix Qualifying</strong></p>
                                         <video width="640" height="360" controls>
                                             <source src="images/EmiliaQualy.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
+                                            <p>FORMULA ADDICT. (2025, May 18). Emilia Romagna Qualifying [Video]. X. https://x.com/i/status/1924012176936698024</p>
                                         </div>
                                         <div id="facts-monaco" class="facts-content hidden">
                                             <p><strong>Monaco Grand Prix</strong></p>
