--- a/index.html
+++ b/index.html
@@ -366,6 +366,12 @@
                                                 Your browser does not support the video tag.
                                             </video>
                                             <p>FORMULA ADDICT. (2025, May 8). F1 Car Weight [Video]. X. https://x.com/i/status/1920518989047902558</p>
+                                            <p><strong>F1 wins</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/F1Wins.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, April 29). F1 Wins [Video]. X. https://x.com/i/status/1917192178931044784</p>
                                         </div>                                  
                                         <div id="facts-australia" class="facts-content hidden">
                                             <p><strong>Australian Grand Prix Qualifying</strong></p>
