--- a/index.html
+++ b/index.html
@@ -422,6 +422,12 @@
                                             <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="facts-emilia" class="facts-content hidden">
+                                            <p><strong>Yuki Crash</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/YukiCrash.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA1. (2025, May 17). Yuki crash [Video]. X. https://x.com/i/status/1923743487347867825</p>
                                             <p><strong>Emilia Romagna Grand Prix Qualifying</strong></p>
                                         <video width="640" height="360" controls>
                                             <source src="images/EmiliaQualy.mp4" type="video/mp4">
