--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
                                             <p>FORMULA ADDICT. (2025, March 22). Chinese Qualifying [Video]. X. https://x.com/i/status/1903418068270715266</p>
                                         </div>
                                         <div id="facts-japan" class="facts-content hidden">
+                                            <img src="images/Japan.png" alt="Japanese Grand Prix" class="w-full max-w-md h-auto mb-4">
                                             <p><strong>Japanese Grand Prix Qualifying</strong></p>
                                             <video width="640" height="360" controls>
                                                 <source src="images/JapanQualy.mp4" type="video/mp4">
