--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                         </div>
                                         <div id="facts-monaco" class="facts-content hidden">
                                             <p><strong>Monaco Grand Prix</strong></p>
-                                            <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/Monaco.png" alt="Monaco Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
