--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                                             <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="facts-emilia" class="facts-content hidden">
+                                            <img src="images/Emilia.png" alt="Eilia Grand Prix" class="w-full max-w-md h-auto mb-4">
                                             <p><strong>Yuki Crash</strong></p>
                                         <video width="640" height="360" controls>
                                             <source src="images/YukiCrash.mp4" type="video/mp4">
