--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                         </div>
                                         <div id="facts-miami" class="facts-content hidden">
                                             <p><strong>Miami Grand Prix</strong></p>
-                                            <img src="images/MiamiResult.png" alt="Miami Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/Miami.png" alt="Miami Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="facts-emilia" class="facts-content hidden">
                                             <img src="images/Emilia.png" alt="Eilia Grand Prix" class="w-full max-w-md h-auto mb-4">
