--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
                                             <p>FORMULA ADDICT. (2025, April 13). Bahrain Qualifying [Video]. X. https://x.com/i/status/1911185450489852276</p>
                                         </div>
                                         <div id="facts-saudi arabia" class="facts-content hidden">
+                                            <img src="images/Saudi.png" alt="Saudi Grand Prix" class="w-full max-w-md h-auto mb-4">
                                             <p><strong>Saudi Arabia Grand Prix Qualifying</strong></p>
                                             <video width="640" height="360" controls>
                                                 <source src="images/SaudiQualy.mp4" type="video/mp4">
