--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                                             <p>FORMULA ADDICT. (2025, April 5). Japanese Qualifying [Video]. X. https://x.com/i/status/1908511412575477985</p>
                                         </div>
                                         <div id="facts-bahrain" class="facts-content hidden">
+                                            <img src="images/Bahrain.png" alt="Bahrain Grand Prix" class="w-full max-w-md h-auto mb-4">
                                             <p><strong>Bahrain Grand Prix Qualifying</strong></p>
                                              <video width="640" height="360" controls>
                                                 <source src="images/BahrainQualy.mp4" type="video/mp4">
@@ -419,7 +420,7 @@
                                             <img src="images/Miami.png" alt="Miami Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="facts-emilia" class="facts-content hidden">
-                                            <img src="images/Emilia.png" alt="Eilia Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/Emilia.png" alt="Emilia Grand Prix" class="w-full max-w-md h-auto mb-4">
                                             <p><strong>Yuki Crash</strong></p>
                                         <video width="640" height="360" controls>
                                             <source src="images/YukiCrash.mp4" type="video/mp4">
