--- a/index.html
+++ b/index.html
@@ -433,6 +433,12 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA ADDICT. (2025, May 18). Emilia Romagna Qualifying [Video]. X. https://x.com/i/status/1924012176936698024</p>
+                                           <p><strong>Max and Oscar start</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/MaxOscar.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA1. (2025, May 19). Max and Oscar [Video]. X. https://x.com/i/status/1924414227168850070</p>
                                         </div>
                                         <div id="facts-monaco" class="facts-content hidden">
                                             <p><strong>Monaco Grand Prix</strong></p>
