--- a/index.html
+++ b/index.html
@@ -443,6 +443,12 @@
                                         <div id="facts-monaco" class="facts-content hidden">
                                             <p><strong>Monaco Grand Prix</strong></p>
                                             <img src="images/Monaco.png" alt="Monaco Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Lando and Charles Qualifying</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/MonacoQualy.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA1. (2025, May 25). Lando and Charles [Video]. X. https://x.com/i/status/1926375400709517795</p>
                                         </div>
                                     </div>
                                 </div>
