--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami')">Miami GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-spain')">Spain GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -327,6 +328,10 @@
                                             <p><strong>Monaco Grand Prix</strong></p>
                                             <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-miami-sprint" class="race-content hidden">
+                                            <p><strong>Spainish Grand Prix</strong></p>
+                                            <img src="images/SpainResult.png" alt="Spain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -348,6 +353,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-miami')">Miami GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-emilia')">Emilia GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-monaco')">Monaco GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-spain')">Spanish GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -449,6 +455,10 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA1. (2025, May 25). Lando and Charles [Video]. X. https://x.com/i/status/1926375400709517795</p>
+                                        </div>
+                                        <div id="facts-spain" class="facts-content hidden">
+                                            <p><strong>Spanish Grand Prix</strong></p>
+                                            <img src="images/Spain.png" alt="Spanish Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
