--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-miami')">Miami GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
-                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-spain')">Spain GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-spain')">Spainish GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -330,7 +330,7 @@
                                         </div>
                                         <div id="race-miami-sprint" class="race-content hidden">
                                             <p><strong>Spainish Grand Prix</strong></p>
-                                            <img src="images/SpainResult.png" alt="Spain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <img src="images/SpainResults.png" alt="Spain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
