--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
                                             <img src="images/MonacoResult.png" alt="Monaco Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                         <div id="race-miami-sprint" class="race-content hidden">
-                                            <p><strong>Spainish Grand Prix</strong></p>
-                                            <img src="images/SpainResults.png" alt="Spain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Spanish Grand Prix</strong></p>
+                                            <img src="images/SpainResult.png" alt="Spain Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
