--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                             <p id="mahem-condition">Condition: Loading...</p>
                             <img src="images/Mahem.png" alt="Mahem event" class="w-full max-w-md h-auto">
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>                            
+                            <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>     
+                            <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
                         </div>
                     </div>
                 </div>
