--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>     
                             <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
+                            <iframe width="935" height="526" src="https://www.youtube.com/embed/3rQxcKFOEoA" title="Mahem Raceway Sprints 9 December 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
