--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
                             <p id="rock-condition">Condition: Loading...</p>
                             <img src="images/TheRock.png" alt="The Rock event" class="w-full max-w-md h-auto">
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
-                            <ul id="rock-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>                            
+                            <ul id="rock-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul> 
+                            <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
+                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/Sw6P0da9Jlc" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                         </div>
                     </div>
                     <div id="card-mahem" class="weather-card bg-[url('images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
