--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                             <img src="images/Ultimate.png" alt="Ultimate event" class="w-full max-w-md h-auto">
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="ultimate-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                            <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
+                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/mys-fn_RjMU" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                         </div>
                     </div>
                     <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
