--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/3rQxcKFOEoA" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
+                            <p class="text-xs sm:text-sm mt-2"><strong>Hotrods Racing:</strong></p>
+                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/t_sB56UG6AM" title="Hotrods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                         </div>
                     </div>
                 </div>
