--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/mys-fn_RjMU" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
+                            <p class="text-xs sm:text-sm mt-2"><strong>Hotrod Racing:</strong></p>
+                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/09t7z15kknw" title="Hotrods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                         </div>
                     </div>
                     <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
@@ -165,7 +169,7 @@
                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/3rQxcKFOEoA" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                            <p class="text-xs sm:text-sm mt-2"><strong>Hotrods Racing:</strong></p>
+                            <p class="text-xs sm:text-sm mt-2"><strong>Hotrod Racing:</strong></p>
                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/t_sB56UG6AM" title="Hotrods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
