--- a/index.html
+++ b/index.html
@@ -479,6 +479,12 @@
                                         <div id="facts-spain" class="facts-content hidden">
                                             <p><strong>Spanish Grand Prix</strong></p>
                                             <img src="images/Spain.png" alt="Spanish Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            <p><strong>Lando and Oscar Qualifying</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/SpainPiastriNorris.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA1. (2025, June 1). Lando and Oscar [Video]. X. https://x.com/i/status/1928890723983900985</p>
                                         </div>
                                     </div>
                                 </div>
