--- a/index.html
+++ b/index.html
@@ -486,6 +486,13 @@
                                         </video>
                                             <p>FORMULA1. (2025, June 1). Lando and Oscar [Video]. X. https://x.com/i/status/1928890723983900985</p>
                                         </div>
+                                        <p><strong>Fastest Lap</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/Fastest Lap.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA1. (2025, June 1). Fastest Lap [Video]. X. https://x.com/i/status/1929267205113360867</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
