--- a/index.html
+++ b/index.html
@@ -391,6 +391,12 @@
                                                 Your browser does not support the video tag.
                                             </video>
                                             <p>FORMULA ADDICT. (2025, May 8). F1 Car Weight [Video]. X. https://x.com/i/status/1920518989047902558</p>
+                                             <p><strong>F1 Car parts</strong></p>
+                                            <video width="640" height="360" controls>
+                                                <source src="images/CarParts.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <p>FORMULA ADDICT. (2025, June 04). F1 Car Parts [Video]. X. https://x.com/i/status/1930340443847569594</p>
                                             <p><strong>F1 wins</strong></p>
                                             <video width="640" height="360" controls>
                                                 <source src="images/F1Wins.mp4" type="video/mp4">
