--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-emilia')">Emilia GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-spain')">Spanish GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-canada')">Canadian GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -352,6 +353,10 @@
                                             <p><strong>Spanish Grand Prix</strong></p>
                                             <img src="images/SpainResult.png" alt="Spanish Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-canada" class="race-content">
+                                            <p><strong>Canadian Grand Prix</strong></p>
+                                            <img src="images/CanadaResult.png" alt="Canadian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -374,6 +379,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-emilia')">Emilia GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-monaco')">Monaco GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-spain')">Spanish GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-canada')">Canadian GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -491,13 +497,16 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA1. (2025, June 1). Lando and Oscar [Video]. X. https://x.com/i/status/1928890723983900985</p>
-                                        
-                                        <p><strong>Fastest Lap</strong></p>
+                                            <p><strong>Fastest Lap</strong></p>
                                         <video width="640" height="360" controls>
                                             <source src="images/Fastest Lap.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA1. (2025, June 1). Fastest Lap [Video]. X. https://x.com/i/status/1929267205113360867</p>
+                                        </div>
+                                        <div id="facts-canada" class="facts-content hidden">
+                                            <p><strong>Canadian Grand Prix</strong></p>
+                                            <img src="images/Canada.png" alt="Canadian Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
