--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                                                 Your browser does not support the video tag.
                                             </video>
                                             <p>FORMULA ADDICT. (2025, April 29). F1 Wins [Video]. X. https://x.com/i/status/1917192178931044784</p>
+                                            <img src="images/2026.png" alt="2026 Schedule" class="w-full max-w-md h-auto mb-4">
                                         </div>                                  
                                         <div id="facts-australia" class="facts-content hidden">
                                             <p><strong>Australian Grand Prix Qualifying</strong></p>
