--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="ultimate-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                             <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
-                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/mys-fn_RjMU" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                                <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                                  <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/mys-fn_RjMU" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                             <p class="text-xs sm:text-sm mt-2"><strong>Hotrod Racing:</strong></p>
-                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/09t7z15kknw" title="Hotrods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                                <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/09t7z15kknw" title="Hotrods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                     <div id="card-rock" class="weather-card bg-[url('images/Racing3.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
@@ -151,9 +151,9 @@
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="rock-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul> 
                             <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
-                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/Sw6P0da9Jlc" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                                <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/Sw6P0da9Jlc" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                     <div id="card-mahem" class="weather-card bg-[url('images/Racing4.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
@@ -166,13 +166,13 @@
                             <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
                             <ul id="mahem-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>     
                             <p class="text-xs sm:text-sm mt-2"><strong>Sprint Racing:</strong></p>
-                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/3rQxcKFOEoA" title="Sprints" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            </div>
                             <p class="text-xs sm:text-sm mt-2"><strong>Hotrod Racing:</strong></p>
-                           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/t_sB56UG6AM" title="Hotrods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -534,6 +534,18 @@
                         </div>
                     </div>
                 </div>
+
+                <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue- anyways400 mb-4">International Rugby Schedules</h2>
+                <div class="grid grid-cols-1 gap-4 sm:gap-6">
+                    <div id="card-int-rugby" class="weather-card bg-[url('images/Rugby1.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                        <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                            <h3 class="text-base sm:text-lg font-bold">International Rugby</h3>
+                            <p class="text-xs sm:text-sm mt-2"><strong>2025 Schedule:</strong></p>
+                            <ul id="intRugby-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
+                        </div>
+                    </div>
+                </div>
+                
             </section>
             <section id="news" class="tab-content hidden">
                 <h2 class="text-center text-xl sm:text-2xl font-semibold text-blue-400 mb-4">Latest News</h2>
