--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-monaco')">Monaco GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-spain')">Spanish GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-canada')">Canadian GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-austria')">Austrian GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -357,6 +358,10 @@
                                             <p><strong>Canadian Grand Prix</strong></p>
                                             <img src="images/CanadaResult.png" alt="Canadian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-austria" class="race-content">
+                                            <p><strong>Austrian Grand Prix</strong></p>
+                                            <img src="images/AustriaResult.png" alt="Austrian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -380,6 +385,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-monaco')">Monaco GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-spain')">Spanish GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-canada')">Canadian GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-austria')">Austrian GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -514,6 +520,11 @@
                                         <div id="facts-canada" class="facts-content hidden">
                                             <p><strong>Canadian Grand Prix</strong></p>
                                             <img src="images/Canada.png" alt="Canadian Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                            
+                                        </div>
+                                        <div id="facts-austria" class="facts-content hidden">
+                                            <p><strong>Austrian Grand Prix</strong></p>
+                                            <img src="images/Austria.png" alt="Austrian Grand Prix" class="w-full max-w-md h-auto mb-4">
                                             
                                         </div>
                                     </div>
