--- a/index.html
+++ b/index.html
@@ -421,6 +421,12 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA ADDICT. (2025, June 11). Pit Stop [Video]. X. https://x.com/i/status/1932787871993221436</p>
+                                            <p><strong>DRS</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/DRS.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA ADDICT. (2025, June 27). DRS [Video]. X. https://x.com/i/status/1938602984323293583</p>
                                             <img src="images/2026.png" alt="2026 Schedule" class="w-full max-w-md h-auto mb-4">
                                         </div>                                  
                                         <div id="facts-australia" class="facts-content hidden">
