--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto">
             <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('motorsport')">Motorsport</button>
             <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('f1')">F1</button>
-            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('sport')">Sport</button>
+            <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('sport')">Rugby</button>
             <button class="tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showTab('news')">News</button>
         </nav>
         <main class="mt-4 sm:mt-6">
