--- a/index.html
+++ b/index.html
@@ -543,6 +543,12 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA1. (2025, June 28). Austria from the air [Video]. X. https://x.com/i/status/1938686520975872152</p>
+                                            <p><strong>Fastest Lap</strong></p>
+                                        <video width="640" height="360" controls>
+                                            <source src="images/FastestLap.mp4" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                            <p>FORMULA1. (2025, June 30). Fastest Lap [Video]. X. https://x.com/i/status/1939450807335997487</p>
                                         </div>
                                         <div id="facts-british" class="facts-content hidden">
                                             <p><strong>British Grand Prix</strong></p>
